z-index fixed

--- a/src/components/BrandsLogo/ScrollToTop.css
+++ b/src/components/BrandsLogo/ScrollToTop.css
@@ -8,7 +8,7 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    z-index: 1000;
+    z-index: 999;
     cursor: pointer;
   }
   .support-icon {
